Updated to v1.5.0 (see CHANGELOG.md)

--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "xolphin-api-js",
-  "version": "1.0.0",
+  "version": "1.5.0",
   "description": "Xolphin API JavaScript library",
   "main": "./lib/xolphin.js",
   "scripts": {},
@@ -8,7 +8,7 @@
     "type": "git",
     "url": "git+https://github.com/xolphin/xolphin-api-js.git"
   },
-  "author": "Xolphin <info@xolphin.nl>, "Roman Ragimoff <roma.ragimoff@gmail.com>",
+  "author": "Xolphin <info@xolphin.nl>, Roman Ragimoff <roma.ragimoff@gmail.com>",
   "license": "ISC",
   "bugs": {
     "url": "https://github.com/xolphin/xolphin-api-js/issues"
